[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boomclaw-sdk"
version = "1.0.0"
description = "Python SDK for the Boomclaw External Game Platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["boomclaw", "game", "sdk", "platform"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
async = [
    "httpx>=0.24.0",
]
dev = [
    "httpx>=0.24.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
    "responses>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/boomclaw_sdk"]
